# codex-history-repair

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
scripts/: dev-server.mjs  rename-tauri-artifacts.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: main.tsx  styles.css  types.ts
ui/components/: ConfirmRepairDialog.tsx  ProviderPanel.tsx  RepairPanel.tsx  SettingsPanel.tsx  StatusCard.tsx  ui.tsx
ui/lib/: api.ts  form.ts  format.ts
