[package]
name = "codex-history-repair-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[lib]
name = "codex_history_repair_ui"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex-history-repair-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
codex-history-repair-core.workspace = true
serde.workspace = true
tauri = { version = "2.11", features = [] }
