[package]
name = "codex-history-repair"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codex-history-repair"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
codex-history-repair-core.workspace = true
serde_json.workspace = true
